added buttons to html and styled it with css, used DOM manipulation to run a single round of RPS whenever we press a button

--- a/style.css
+++ b/style.css
@@ -4,3 +4,19 @@
     background-attachment: fixed;
     background-size: cover;
 }/* put this img as background*/
+
+.buttons{
+    display: flex;
+    justify-content: space-around;
+}
+button{
+font-size: xx-large;
+background:black;
+border-color: cyan;
+/*transition: all .07s ease;*/
+}
+/*.playing {
+    transform: scale(1.1);
+    border-color: #ffc600;
+    box-shadow: 0 0 1rem #ffc600;
+  }*/
